[iOS] selectionImageForcingBlackText should return autoreleased object https://bugs.webkit.org/show_bug.cgi?id=129437 <rdar://problem/15810384>

Reviewed by Darin Adler.

Source/WebCore:

* bindings/objc/DOM.mm:
(-[DOMRange renderedImageForcingBlackText:renderedImageForcingBlackText:]):

Source/WebKit/mac:

* WebView/WebHTMLView.mm:
(-[WebHTMLView selectionImageForcingBlackText:selectionImageForcingBlackText:]):

Canonical link: https://commits.webkit.org/147611@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164931 268f45cc-cd09-0410-ab3c-d52691b4dbfc